# jetson-lightweight-seg-deployment

./: .dockerignore  .gitignore  Dockerfile  README.md
deploy/tensorrt/cpp/: CMakeLists.txt  check_trt_opencv.cpp  infer_yolov8n_seg_trt.cpp
docs/benchmarks/: rtx3090_yolov8n_seg_320_backend_summary.csv
docs/benchmarks/int8/: fp16_int8_consistency.csv  fp16_int8_consistency_summary.csv  int8_1image_calib_detection_result.txt  yolov8n_seg_int8_ptq_report.md  yolov8n_seg_int8_ptq_summary.csv
docs/benchmarks/jetson/: jetson_yolov8n_seg_320_backend_summary.csv
docs/benchmarks/service/: fastapi_service_summary.csv
scripts/: build_yolov8n_seg_int8_engine.py  compare_ort_trt_yolov8n_seg.py  compare_trt_quant_outputs.py  export_yolov8n_seg_onnx.py  infer_onnxruntime_yolov8n_seg.py  inspect_onnx.py  jetson_postprocess_trtexec_yolov8n_seg.py  jetson_prepare_trt_input_yolov8n_seg.py  make_toy_calib_set.py  postprocess_trtexec_yolov8n_seg.py  postprocess_trtexec_yolov8n_seg_v2.py  prepare_trt_input_yolov8n_seg.py  setup_ort_cuda_libs.sh  setup_trt_cpp_libs.sh  simplify_onnx.py  test_onnxruntime_shapes.py  test_yolov8n_seg_pytorch.py
service/: app.py  client_test.py  requirements.txt  yolov8_seg_onnx.py
